@@ -1,3 +1,6 @@
+2011-07-13  Jeremy Cribb <jcribb@email.unc.edu>
+	* CellProcessingScript.m:  now fails nicely when no data are found.  Also added more standardized logging output.
+
 2011-07-12  Jeremy Cribb <jcribb@email.unc.edu>
 	* CellProcessingScript.m:  fixed bug where new window size definition screws up the plotting parameters.
 
